--- a/About US.html
+++ b/About US.html
@@ -11,7 +11,8 @@
 <body>
   <header class="header">
     <a href="index.html">
-      <img class="logo" src="Grocies Supermarket (4).png" alt="logo">
+       <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
+
     </a>
     
     <div class="navbar">
