--- a/Products.html
+++ b/Products.html
@@ -12,7 +12,7 @@
 <body class="pro-p">
   <header class="header">
     <a href="index.html">
-      <img class="logo" src="Grocies Supermarket (4).png" alt="logo">
+      <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
     <div class="navbar">
