--- a/Vegetables.html
+++ b/Vegetables.html
@@ -11,7 +11,7 @@
 <body class="veg-p">
   <header class="header">
     <a href="index.html">
-      <img class="logo" src="Grocies Supermarket (4).png" alt="logo">
+      <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
     <div class="navbar">
