--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="logo" src="Grocies Supermarket (4).png" alt="logo">
+            <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
         </a>
         <div class="navbar">
             <li><a href="index.html">Home</a></li>
