--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="intro-container">
         <div class="intro-container-1">
-          <img src="Untitled design (3).png" alt="" class="intro-image">
+          <img src="Untitled_design_3.png" alt="" class="intro-image">
           <h3 class="intro-topic">Free Shipping</h3>
           <p class="intro-para">Free shipping on all your order</p>
         </div>
