--- a/index.html
+++ b/index.html
@@ -59,28 +59,27 @@
           <p class="intro-para">Free shipping on all your order</p>
         </div>
         <div class="intro-container-1">
-          <img src="customer support.png" alt="" class="intro-image">
+          <img src="customer support.png" alt="Customer Support" class="intro-image">
           <h3 class="intro-topic">Customer Support 24/7</h3>
           <p class="intro-para">Instant access to Support</p>
         </div>
         <div class="intro-container-1">
-          <img src="secure payment.png" alt="" class="intro-image">
+          <img src="secure payment.png" alt="Secure Payment" class="intro-image">
           <h3 class="intro-topic">100% Secure Payment</h3>
           <p class="intro-para">We ensure your money is save</p>
         </div>
         <div class="intro-container-1">
-          <img src="money back.png" alt="" class="intro-image">
+          <img src="money back.png" alt="Money-Back Guarantee" class="intro-image">
           <h3 class="intro-topic">Money-Back Guarantee</h3>
           <p class="intro-para"> 30 Days Money-Back Guarantee</p>
         </div>
       </div>
       
       <div class="home-intro">
-        <div class="h-i-1"><img src="imgs/17.jpg"id="home-intro-image" alt="" >
+        <div class="h-i-1"><img src="imgs/17.jpg" id="home-intro-image" alt="" >
           <a href="Vegetables.html">
           <div class="overlay-h">
-          <div class="text-h">Vegetables</div></a>
-        </div>
+          <div class="text-h">Vegetables</div></a></div>
       </div>
         <div class="h-i-1"><img src="imgs/37.jpg" id="home-intro-image" alt="">
           <a href="Dairy Products.html">
