--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -65,14 +65,14 @@
       </thead>
       <tbody>
         <tr>
-          <td><img src="cosmetic 1/1604633691-mented-1604633674-removebg-preview (1).png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/1604633691-mented-1604633674-removebg-preview (1).png" alt="Product1"></td>
           <td><h4>Mented Lipstick</h4>
             <p>Rs.1500.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/1622217355-narnar153_pinup_nars-air-matte-lip-colour_7_1560x1960-5k1e7jpg-removebg-preview (1).png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/1622217355-narnar153_pinup_nars-air-matte-lip-colour_7_1560x1960-5k1e7jpg-removebg-preview (1).png" alt="Product2"></td>
           <td><h4>Nars Lipstick</h4>
             <p>Rs.1200.00</p>
             <form>
@@ -82,14 +82,14 @@
         </tr>
   
         <tr>
-          <td><img src="cosmetic 1/single4-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/single4-removebg-preview.png" alt="Product3"></td>
           <td><h4>Makeup Primer</h4>
             <p>Rs.1300 00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/1680007487-fenty-beauty-match-stix-6422e12e3c949-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/1680007487-fenty-beauty-match-stix-6422e12e3c949-removebg-preview.png" alt="Product4"></td>
           <td><h4>Fenty Beauty Contuor </h4>
             <p>Rs.2100.00</p>
             <form>
@@ -99,14 +99,14 @@
         </tr>
         
         <tr>
-          <td><img src="cosmetic 1/1700065487-1655149220-soothing-cleanser-3606000463660-skinceuticals-6554f0b6dc048-removebg-preview (1).png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/1700065487-1655149220-soothing-cleanser-3606000463660-skinceuticals-6554f0b6dc048-removebg-preview (1).png" alt="Product5"></td>
           <td><h4>Skinceuticals Soothing Cleanser</h4>
             <p>Rs.1750.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/1709242330-one-size-by-patrick-starrr-ultimate-blurring-setting-powder-sweet-honey-65e0f7d117df6-removebg-preview (1).png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/1709242330-one-size-by-patrick-starrr-ultimate-blurring-setting-powder-sweet-honey-65e0f7d117df6-removebg-preview (1).png" alt="Product6"></td>
           <td><h4>O/S Setting Powder</h4>
             <p>Rs.2200.00</p>
             <form>
@@ -116,14 +116,14 @@
         </tr>
   
         <tr>
-          <td> <img src="cosmetic 1/3829foto-removebg-preview.png" alt="Product 1"></td>
+          <td> <img src="cosmetic 1/3829foto-removebg-preview.png" alt="Product7"></td>
           <td><h4>Neve Cosmatics Blusher </h4>
             <p>Rs.1550.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/910ec0406fa6f7d01e68f5a8beae1e1e-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/910ec0406fa6f7d01e68f5a8beae1e1e-removebg-preview.png" alt="Product8"></td>
           <td><h4>Glow Baby Booster Serum</h4>
             <p>Rs.1900.00</p>
             <form>
@@ -133,14 +133,14 @@
         </tr>
   
         <tr>
-          <td><img src="cosmetic 1/anastasia_20brow_20liner.0-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/anastasia_20brow_20liner.0-removebg-preview.png" alt="Product9"></td>
           <td><h4>Eye Liner Pencil</h4>
             <p>Rs.750.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/bobbi-brown-makeup-1649326182-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/bobbi-brown-makeup-1649326182-removebg-preview.png" alt="Product10"></td>
           <td><h4>Blusher</h4>
             <p>Rs.2200.00</p>
             <form>
@@ -150,14 +150,14 @@
         </tr>
   
         <tr>
-          <td><img src="cosmetic 1/CKSio3QkkjXxvBgpDsBhUf-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/CKSio3QkkjXxvBgpDsBhUf-removebg-preview.png" alt="Product11"></td>
           <td><h4>Fenty Beauty Foundation</h4>
             <p>Rs.2000.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/f0e6c2a65895d8f016d7b50159a78d7d-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/f0e6c2a65895d8f016d7b50159a78d7d-removebg-preview.png" alt="Product12"></td>
           <td><h4>Coveriflx Eye Serum</h4>
             <p>Rs.1200.00</p>
             <form>
@@ -167,14 +167,14 @@
         </tr>
   
         <tr>
-          <td><img src="cosmetic 1/single4-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/single4-removebg-preview.png" alt="Product13"></td>
           <td><h4>Minimalist Salicilic Acid 2%</h4>
             <p>Rs.2500.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic 1/Visuel1-new-removebg-preview.png" alt="Product 1"></td>
+          <td><img src="cosmetic 1/Visuel1-new-removebg-preview.png" alt="Product14"></td>
           <td><h4>Cerave Moisturising Lotion</h4>
             <p>Rs.4500.00</p>
             <form>
@@ -189,7 +189,7 @@
   
   <footer class="custom-footer">
     <div class="footer-social">
-      <a href="#"><img src="fb.webp"></a> 
+      <a href="#"><img src="fb.webp" alt="fb"></a> 
       <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png"></a>
     </div>
     
