--- a/Products.html
+++ b/Products.html
@@ -21,23 +21,28 @@
         <li><a href="About US.html">About Us</a></li>
         <div class="dropdown">
           <button class="dropbtn">
-            <li><a href="Products.html">Products</a></li>
+            <li><a href="Products.html" class="button-link">Product</a></li>
           </button>
-          <div class="dropdown-content">
-            <li><a href="Vegetables.html">Vegetables</a></li>
-            <li><a href="Dairy Products.html">Dairy Products</a></li>
-            <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-          </div>
+            
+            <ol>
+            <div class="dropdown-content">
+              <li><a href="Vegetables.html">Vegetables</a></li>
+              <li><a href="Dairy Products.html">Dairy Products</a></li>
+              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+            </div>
+          </ol>
         </div>
         <li><a href="Order.html">Buy Now</a></li>
-        <div class="icons-image">
-          <a href="Loyality.html">
-            <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
-          </a>
-          <a href="./cart.html" class="registration-icon">
-            <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
-          </a>
-        </div>
+        <ol>
+          <div class="icons-image">
+            <a href="Loyality.html">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+            </a>
+            <a href="./cart.html" class="registration-icon">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+            </a>
+          </div>
+        </ol>
       </ol>
     </div>
   </header>
@@ -67,8 +72,8 @@
       <div class="grid-text">Dairy Products</div>
       <div class="grid-line"></div>
     </div>
-    <p id="sentence">Welcome to our Dairy Collection! We're here to celebrate the richness and versatility of dairy products, offering a selection that's as varied as it is delicious. From fresh milk and creamy cheese to the tangy yogurt and the sweet ice cream, our dairy offerings are designed to cater to every taste and dietary need.</p>
-    <a href="Dairy Products.html"><button class="pro-button">Learn More</button> </a></div>
+    <p id="sentence1">Welcome to our Dairy Collection! We're here to celebrate the richness and versatility of dairy products, offering a selection that's as varied as it is delicious. From fresh milk and creamy cheese to the tangy yogurt and the sweet ice cream, our dairy offerings are designed to cater to every taste and dietary need.</p>
+    <a href="Dairy Products.html" class="pro-button">Learn More</a></div>
   </div>
 
   <div class="pro-image">
@@ -79,8 +84,8 @@
             <div class="grid-text">Vegetables</div>
             <div class="grid-line"></div>
           </div>
-          <p id="sentence">Welcome to our Vegetable Collection! Our selection is not just about variety; it's about providing you with the freshest, highest-quality vegetables to support your health and well-being. From crisp lettuces and ripe tomatoes to vibrant herbs and freshly picked fruits, our offerings are designed to cater to every dietary need and preference.</p>
-          <a href="Vegetables.html"><button class="pro-button">Learn More</button> </a>
+          <p id="sentence2">Welcome to our Vegetable Collection! Our selection is not just about variety; it's about providing you with the freshest, highest-quality vegetables to support your health and well-being. From crisp lettuces and ripe tomatoes to vibrant herbs and freshly picked fruits, our offerings are designed to cater to every dietary need and preference.</p>
+          <a href="Vegetables.html" class="pro-button">Learn More</a></div>
           </div>
         </div>
 
@@ -92,15 +97,15 @@
             <div class="grid-text">Cosmetics And SkinCare</div>
             <div class="grid-line"></div>
           </div>
-          <p id="sentence">Welcome to our Cosmetic and Skincare Collection! We're here to transform your beauty routine with our carefully curated selection of high-quality cosmetics and skincare products. From moisturizers to cleansers, our offerings are designed to nourish, protect, and enhance your skin's natural beauty.</p>
-          <a href="Cosmatics.html"><button class="pro-button">Learn More</button> </a>
+          <p id="sentence3">Welcome to our Cosmetic and Skincare Collection! We're here to transform your beauty routine with our carefully curated selection of high-quality cosmetics and skincare products. From moisturizers to cleansers, our offerings are designed to nourish, protect, and enhance your skin's natural beauty.</p>
+          <a href="Cosmatics.html" class="pro-button">Learn More</a></div>
         </div>
       </div>
 
       <footer class="custom-footer">
         <div class="footer-social">
-          <a href="#"><img src="fb.webp"></a> 
-          <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png"></a>
+          <a href="#"><img src="fb.webp" alt="fb"></a> 
+          <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png" alt="inster"></a>
         </div>
         
         <div class="footer-contact">
@@ -111,8 +116,8 @@
           <p>&copy; 2024 Grocies Supermarket. All rights reserved.</p>
         </div>
         <div>
-           <!---https://www.freepik.com/---->
-           <!---https://www.pinterest.com/pin/905293962584884262/-->
+           <!--https://www.freepik.com/-->
+           <!--https://www.pinterest.com/pin/905293962584884262/-->
         </div>
       </footer>
 
