--- a/About US.html
+++ b/About US.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="color-scheme" content="light color">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="./normalize.css">
@@ -9,7 +10,8 @@
 
 </head>
 <body>
-  <header class="header">
+    <pre style="overflow-wrap: break-word; white-space: pre-wrap;"></pre>
+    <header class="header">
     <a href="index.html">
        <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
