--- a/Order.html
+++ b/Order.html
@@ -10,7 +10,7 @@
 <body class="order-p">
   <header class="header">
     <a href="index.html" aria-label="Homepage">
-      <img class="logo" src="Grocies Supermarket (4).png" alt="Grocies Supermarket Logo">
+      <img class="logo" src="Grocies_Supermarket_4.png" alt="Grocies Supermarket Logo">
     </a>
     
     <nav class="navbar">
