--- a/cart.html
+++ b/cart.html
@@ -28,17 +28,17 @@
               <li><a href="Order.html">Buy Now</a></li>
               <div class="icons-image">
                 <a href="Loyality.html">
-                  <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+                  <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="registericon">
                 </a>
                 <a href="./cart.html" class="registration-icon">
-                  <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+                  <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="carticon">
                 </a>
               </div>
             </ol>
           </div>
     </header>
     <main>
-        <img src="new imgs/good-looking-woman-1-min.jpg" class="cart-b">
+        <img src="new imgs/good-looking-woman-1-min.jpg" alt="cart-b" class="cart-b">
         <div class="cart-main-t">
             <h1>Order Now!</h1>
         </div>
