--- a/Order.html
+++ b/Order.html
@@ -12,7 +12,7 @@
 <body class="order-p">
   <header class="header">
     <a href="index.html">
-      <img class="logo" src="Grocies Supermarket (4).png" alt="logo">
+      <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
     <div class="navbar">
@@ -21,23 +21,28 @@
         <li><a href="About US.html">About Us</a></li>
         <div class="dropdown">
           <button class="dropbtn">
-            <li><a href="Products.html">Products</a></li>
+            <li><a href="Products.html" class="button-link">Product</a></li>
+
           </button>
-          <div class="dropdown-content">
-            <li><a href="Vegetables.html">Vegetables</a></li>
-            <li><a href="Dairy Products.html">Dairy Products</a></li>
-            <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-          </div>
+          <ol>
+            <div class="dropdown-content">
+              <li><a href="Vegetables.html">Vegetables</a></li>
+              <li><a href="Dairy Products.html">Dairy Products</a></li>
+              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+            </div>
+          </ol>
         </div>
         <li><a href="Order.html">Buy Now</a></li>
-        <div class="icons-image">
-          <a href="Loyality.html">
-            <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
-          </a>
-          <a href="./cart.html" class="registration-icon">
-            <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
-          </a>
-        </div>
+        <ol>
+          <div class="icons-image">
+            <a href="Loyality.html">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+            </a>
+            <a href="./cart.html" class="registration-icon">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+            </a>
+          </div>
+        </ol>
       </ol>
     </div>
   </header>
