--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
+            <img class="logo" src="Grocies_Supermarket_4.png" alt="logoimg">
         </a>
      <div class="navbar">
             <ol>
@@ -298,8 +298,8 @@
     <br>
     <footer class="custom-footer">
         <div class="footer-social">
-          <a href="#"><img src="fb.webp"></a> 
-          <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png"></a>
+          <a href="#"><img src="fb.webp" alt="fb"></a> 
+          <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png" alt="inster"></a>
         </div>
         <div class="footer-contact">
           <p>Phone: +1234567890</p>
