--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
         </a>
      <div class="navbar">
             <ol>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html" >Home</a></li>
               <li><a href="About US.html">About Us</a></li>
               <div class="dropdown">
                 <button class="dropbtn">
@@ -30,7 +30,7 @@
                 <a href="Loyality.html">
                   <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="registericon">
                 </a>
-                <a href="./cart.html" class="registration-icon">
+                <a href="./cart.html" class="active" class="registration-icon">
                   <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="carticon">
                 </a>
               </div>
