--- a/Loyality.html
+++ b/Loyality.html
@@ -15,36 +15,33 @@
       <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
-    <div class="navbar">
+        <nav class="navbar">
       <ol>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="About US.html">About Us</a></li>
-        <div class="dropdown">
-          <button class="dropbtn">
-            <li><a href="Products.html" class="button-link">Product</a></li>
-
-          </button>
-          <ol>
-            <div class="dropdown-content">
-              <li><a href="Vegetables.html">Vegetables</a></li>
-              <li><a href="Dairy Products.html">Dairy Products</a></li>
-              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-            </div>
-          </ol>
-        </div>
-        <li><a href="Order.html">Buy Now</a></li>
+        <li><a href="About_Us.html">About Us</a></li>
         <ol>
-          <div class="icons-image">
-            <a href="Loyality.html">
-              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+          <li class="dropdown">
+            <button class="dropbtn">Products</button>
+            <div class="dropdown-content">
+              <a href="Vegetables.html">Vegetables</a>
+              <a href="Dairy Products.html">Dairy Products</a>
+              <a href="Cosmatics.html">Cosmetic and SkinCare</a>
+            </div>
+          </li>
+        </ol>
+        <ol>
+          <li><a href="Order.html">Buy Now</a></li>
+          <li class="icons-image">
+            <a href="Loyality.html" aria-label="User Profile">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="User Profile Icon">
             </a>
-            <a href="./cart.html" class="registration-icon">
-              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+            <a href="./cart.html" class="registration-icon" aria-label="Shopping Cart">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="Shopping Cart Icon">
             </a>
-          </div>
+          </li>
         </ol>
       </ol>
-    </div>
+    </nav>
   </header>
   
   <section class="loyality-form-container">
@@ -110,8 +107,8 @@
 
 <footer class="custom-footer">
   <div class="footer-social">
-    <a href="#"><img src="fb.webp"></a> 
-    <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png"></a>
+    <a href="#"><img src="fb.webp" alt="fb"></a> 
+    <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png" alt="inster"></a>
   </div>
   
   <div class="footer-contact">
@@ -122,7 +119,7 @@
     <p>&copy; 2024 Grocies Supermarket. All rights reserved.</p>
   </div>
   <div>
-     <!---https://www.freepik.com/---->
+     <!--https://www.freepik.com/-->
   </div>
 </footer>
 
