--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
    <div class="navbar">
       <ol>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="About US.html">About Us</a></li>
+        <li><a href="About_US.html">About Us</a></li>
         <div class="dropdown">
-          <button class="dropbtn">
-            <li><a href="Products.html" class="button-link">Product</a></li>
-
-          </button>
-          <ol>
-            <div class="dropdown-content">
-              <li><a href="Vegetables.html">Vegetables</a></li>
-              <li><a href="Dairy Products.html">Dairy Products</a></li>
-              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-            </div>
-          </ol>
-        </div>
+            <li class="dropbtn"><a href="Products.html" class="button-link">Product</a></li>
+            <ol>
+                <div class="dropdown-content">
+                    <li><a href="Vegetables.html">Vegetables</a></li>
+                    <li><a href="Dairy Products.html">Dairy Products</a></li>
+                    <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+                </div>
+            </ol>
+         </div>
         <li><a href="Order.html">Buy Now</a></li>
         <ol>
           <div class="icons-image">
@@ -64,17 +61,17 @@
           <p class="intro-para">Free shipping on all your order</p>
         </div>
         <div class="intro-container-1">
-          <img src="customer support.png" alt="Customer Support" class="intro-image">
+          <img src="imgs/customer_support.png"alt="Customer Support" class="intro-image">
           <h3 class="intro-topic">Customer Support 24/7</h3>
           <p class="intro-para">Instant access to Support</p>
         </div>
         <div class="intro-container-1">
-          <img src="secure payment.png" alt="Secure Payment" class="intro-image">
+          <img src="imgs/secure_payment.png" alt="Secure Payment" class="intro-image">
           <h3 class="intro-topic">100% Secure Payment</h3>
           <p class="intro-para">We ensure your money is save</p>
         </div>
         <div class="intro-container-1">
-          <img src="money back.png" alt="Money-Back Guarantee" class="intro-image">
+          <img src="imgs/money_back.png" alt="Money-Back Guarantee" class="intro-image">
           <h3 class="intro-topic">Money-Back Guarantee</h3>
           <p class="intro-para"> 30 Days Money-Back Guarantee</p>
         </div>
