--- a/Loyality.html
+++ b/Loyality.html
@@ -20,8 +20,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="About_Us.html">About Us</a></li>
         <ol>
-          <li class="dropdown">
-            <button class="dropbtn">Products</button>
+            <li class="dropbtn"><a href="Products.html">Product</a></li>
             <div class="dropdown-content">
               <a href="Vegetables.html">Vegetables</a>
               <a href="Dairy Products.html">Dairy Products</a>
