--- a/Order.html
+++ b/Order.html
@@ -20,10 +20,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="About_US.html">About Us</a></li>
         <div class="dropdown">
-          <button class="dropbtn">
-            <li><a href="Products.html" class="button-link">Product</a></li>
-
-          </button>
+         <li class="dropbtn"><a href="Products.html">Product</a></li>
           <ol>
             <div class="dropdown-content">
               <li><a href="Vegetables.html">Vegetables</a></li>
@@ -48,7 +45,7 @@
   </header>
 
   <div class="order-main">
-    <img src="imgs/Untitled design (10).png" alt="" class="order-b">
+    <img src="imgs/Untitled_design_10.png" alt="" class="order-b">
     <div class="order-main-t">
       <h1>Order Now </h1>
     </div>
@@ -145,8 +142,8 @@
   
   <footer class="custom-footer">
     <div class="footer-social">
-      <a href="#"><img src="fb.webp" alt></a> 
-      <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png" lat="inster"></a>
+      <a href="#"><img src="fb.webp" alt="fb"></a> 
+      <a href=""><img src="instagram-circular-black-icon-vector-29783030-removebg-preview.png" alt="inster"></a>
     </div>
     <div class="footer-contact">
       <p>Phone: +1234567890</p>
