--- a/Loyality.html
+++ b/Loyality.html
@@ -10,38 +10,38 @@
 
 <body class="loyality-b">
 
-   <header class="header">
+<header class="header">
     <a href="index.html">
       <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
-        <nav class="navbar">
+   <div class="navbar">
       <ol>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="About_Us.html">About Us</a></li>
+        <li><a href="About_US.html">About Us</a></li>
+        <div class="dropdown">
+            <li class="dropbtn"><a href="Products.html" class="button-link">Product</a></li>
+            <ol>
+                <div class="dropdown-content">
+                    <li><a href="Vegetables.html">Vegetables</a></li>
+                    <li><a href="Dairy Products.html">Dairy Products</a></li>
+                    <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+                </div>
+            </ol>
+         </div>
+        <li><a href="Order.html">Buy Now</a></li>
         <ol>
-            <li class="dropbtn"><a href="Products.html">Product</a></li>
-            <div class="dropdown-content">
-              <a href="Vegetables.html">Vegetables</a>
-              <a href="Dairy Products.html">Dairy Products</a>
-              <a href="Cosmatics.html">Cosmetic and SkinCare</a>
-            </div>
-          </li>
-        </ol>
-        <ol>
-          <li><a href="Order.html">Buy Now</a></li>
-          <li class="icons-image">
-            <a href="Loyality.html" aria-label="User Profile">
-              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="User Profile Icon">
+          <div class="icons-image">
+            <a href="Loyality.html">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="registraion">
             </a>
-            <a href="./cart.html" class="registration-icon" aria-label="Shopping Cart">
-              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="Shopping Cart Icon">
+            <a href="./cart.html" class="registration-icon">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="icon">
             </a>
-          </li>
+          </div>
         </ol>
       </ol>
-    </nav>
-  </header>
+    </div>
   
   <section class="loyality-form-container">
     <div class="loyality-box">
