--- a/Loyality.html
+++ b/Loyality.html
@@ -8,36 +8,40 @@
     <link rel="stylesheet" href="./main-styles.css">
 </head>
 <body class="loyality-b">
-        <header class="header">
-        <a href="index.html">
-            <img class="logo" src="Grocies_Supermarket_4.png" alt="logoimg">
-        </a>
-     <div class="navbar">
-            <ol>
-              <li><a href="index.html" >Home</a></li>
-              <li><a href="About US.html">About Us</a></li>
-              <div class="dropdown">
-                <button class="dropbtn">
-                  <li><a href="Products.html">Products</a></li>
-                </button>
-                <div class="dropdown-content">
-                  <li><a href="Vegetables.html">Vegetables</a></li>
-                  <li><a href="Dairy Products.html">Dairy Products</a></li>
-                  <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-                </div>
-              </div>
-              <li><a href="Order.html">Buy Now</a></li>
-              <div class="icons-image">
-                <a href="Loyality.html">
-                  <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="registericon">
-                </a>
-                <a href="./cart.html" class="active" class="registration-icon">
-                  <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="carticon">
-                </a>
-              </div>
-            </ol>
+     <header class="header">
+    <a href="index.html">
+      <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
+    </a>
+    
+    <div class="navbar">
+      <ol>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="About_Us.html">About Us</a></li>
+        <div class="dropdown">
+          <li class="dropbtn"><a href="Products.html">Product</a></li>
+          <ol>
+            <div class="dropdown-content">
+              <li><a href="Vegetables.html">Vegetables</a></li>
+              <li><a href="Dairy Products.html">Dairy Products</a></li>
+              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+            </div>
+          </ol>
+        </div>
+        <li><a href="Order.html">Buy Now</a></li>
+        <ol>
+          <div class="icons-image">
+            <a href="Loyality.html">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+            </a>
+            <a href="./cart.html" class="registration-icon">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+            </a>
           </div>
-    </header>
+        </ol>
+      </ol>
+    </div>
+  </header>
+       
 
 
 
