--- a/Loyality.html
+++ b/Loyality.html
@@ -16,7 +16,7 @@
     <div class="navbar">
       <ol>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="About_Us.html">About Us</a></li>
+        <li><a href="About_US.html">About Us</a></li>
         <div class="dropdown">
           <li class="dropbtn"><a href="Products.html">Product</a></li>
           <ol>
