--- a/About_US.html
+++ b/About_US.html
@@ -5,6 +5,7 @@
     <meta name="color-scheme" content="light color">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="icon" href="Grocies_Supermarket_4.png">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./main-styles.css">
 
