--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairy Products</title>
+    <link rel="icon" href="Grocies_Supermarket_4.png">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./main-styles.css">
 </head>
