--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -58,7 +58,7 @@
    <!-- products -->
   <div class="dairy-container">
     <div class="d-box">
-      <img src="dairy_1/fresh milk.png" alt="Milk">
+      <img src="dairy_1/freshmilk.png" alt="Milk">
       <p>Ambewela Uht Milk 1L</p>
       <p>Rs 550.00</p>
       <form>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/Anchor 400 g.png" alt="Anchor">
+      <img src="dairy_1/Anchor400.png" alt="Anchor">
       <p>Anchor Milk Powder 1Kg Pkt</p>
       <p>Rs 2,620.00</p>
       <form>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/Anchor salted butter 227g.png" alt="butter">
+      <img src="dairy_1/Anchorbutter.png" alt="butter">
       <p>Anchor Butter Salted 227.00 g</p>
       <p>Rs. 1300.00</p>
       <form>
@@ -112,7 +112,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/chocolate ice cream.png" alt="icecream">
+      <img src="dairy_1/chocolatecream.png" alt="icecream">
       <p>Eh Chocolate Ice Cream 2L</p>
       <p>Rs 1,125.00</p>
       <form>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/happy cow.png" alt="chedder">
+      <img src="dairy_1/happycow.png" alt="chedder">
       <p>H/Cow Cheddar Slices 200g</p>
       <p>Rs 1,780.00</p>
       <form>
@@ -140,7 +140,7 @@
 
     
     <div class="d-box">
-      <img src="dairy_1/ice coffee.png" alt="icecoffee">
+      <img src="dairy_1/icecoffee.png" alt="icecoffee">
       <p>Richlife Iced Coffee 1000ml</p>
       <p>Rs 620.00</p>
       <form>
@@ -151,7 +151,7 @@
     
 
     <div class="d-box">
-      <img src="dairy_1/non fat fresh milk.png" alt="non-milk">
+      <img src="dairy_1/nonmilk.png" alt="non-milk">
       <p>Ambewela Non Fat Milk 1l</p>
       <p>Rs.570.00</p>
       <form>
@@ -180,7 +180,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/pure dai.png" alt="puredale">
+      <img src="dairy_1/puredai.png" alt="puredale">
       <p>Puredale Milk Powder 400g</p>
       <p>Rs 910.00</p>
       <form>
