--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="d-box">
-      <img src="dairy_1/Anchorbutter.png" alt="butter">
+      <img src="dairy_1/AnchorSaltedbutter.png" alt="butter">
       <p>Anchor Butter Salted 227.00 g</p>
       <p>Rs. 1300.00</p>
       <form>
