--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -68,14 +68,14 @@
       </thead>
       <tbody>
         <tr>
-          <td><img src="cosmetic_1/1604633691-mented-1604633674-removebg-preview (1).png" alt="Product1"></td>
+          <td><img src="cosmetic_1/1604633691-mented-1604633674-removebg-preview_1png" alt="Product1"></td>
           <td><h4>Mented Lipstick</h4>
             <p>Rs.1500.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic_1/1622217355-narnar153_pinup_nars-air-matte-lip-colour_7_1560x1960-5k1e7jpg-removebg-preview (1).png" alt="Product2"></td>
+          <td><img src="cosmetic_1/1622217355-narnar153_pinup_nars-air-matte-lip-colour_7_1560x1960-5k1e7jpg-removebg-preview_1.png" alt="Product2"></td>
           <td><h4>Nars Lipstick</h4>
             <p>Rs.1200.00</p>
             <form>
@@ -102,14 +102,14 @@
         </tr>
         
         <tr>
-          <td><img src="cosmetic_1/1700065487-1655149220-soothing-cleanser-3606000463660-skinceuticals-6554f0b6dc048-removebg-preview (1).png" alt="Product5"></td>
+          <td><img src="cosmetic_1/1700065487-1655149220-soothing-cleanser-3606000463660-skinceuticals-6554f0b6dc048-removebg-preview_1.png" alt="Product5"></td>
           <td><h4>Skinceuticals Soothing Cleanser</h4>
             <p>Rs.1750.00</p>
             <form>
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic-1/1709242330-one-size-by-patrick-starrr-ultimate-blurring-setting-powder-sweet-honey-65e0f7d117df6-removebg-preview (1).png" alt="Product6"></td>
+          <td><img src="cosmetic-1/1709242330-one-size-by-patrick-starrr-ultimate-blurring-setting-powder-sweet-honey-65e0f7d117df6-removebg-preview_1.png" alt="Product6"></td>
           <td><h4>O/S Setting Powder</h4>
             <p>Rs.2200.00</p>
             <form>
