--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -68,7 +68,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><img src="cosmetic_1/1604633691-mented-1604633674-removebg-preview_1png" alt="Product1"></td>
+          <td><img src="cosmetic_1/1604633691-mented-1604633674-removebg-preview_1.png" alt="Product1"></td>
           <td><h4>Mented Lipstick</h4>
             <p>Rs.1500.00</p>
             <form>
