--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -109,7 +109,7 @@
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic-1/1709242330-one-size-by-patrick-starrr-ultimate-blurring-setting-powder-sweet-honey-65e0f7d117df6-removebg-preview_1.png" alt="Product6"></td>
+          <td><img src="cosmetic-1/powder" alt="Product6"></td>
           <td><h4>O/S Setting Powder</h4>
             <p>Rs.2200.00</p>
             <form>
