--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -109,7 +109,7 @@
               <button class="order-button" type="submit" formaction="cart.html">Order Now </button>
             </form>
           </td>
-          <td><img src="cosmetic_1/powder" alt="Product6"></td>
+          <td><img src="cosmetic_1/powder.png" alt="Product6"></td>
           <td><h4>O/S Setting Powder</h4>
             <p>Rs.2200.00</p>
             <form>
