--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="home-intro">
         <div class="h-i-1">
           <a href="Vegetables.html">
-            <img src="imgs/17.jpg" id="home-intro-image" alt="" >
+            <img src="imgs/17.jpg" id="home-intro-image" alt="img1" >
             <div class="overlay-h">
               <div class="text-h">Vegetables</div>
           </a>
@@ -90,7 +90,7 @@
 
         <div class="h-i-1">
           <a href="Dairy Products.html">
-            <img src="imgs/37.jpg" id="home-intro-image" alt="">
+            <img src="imgs/37.jpg" id="home-intro-image" alt="img2">
             <div class="overlay-h">
               <div class="text-h">Dairy</div></a>
             </div>
@@ -98,7 +98,7 @@
 
         <div class="h-i-1"> 
           <a href="Cosmatics.html">
-            <img src="imgs/31.jpg" id="home-intro-image" alt="">
+            <img src="imgs/31.jpg" id="home-intro-image" alt="img3">
             <div class="overlay-h">
               <div class="text-h">Cosmetics</div></a>
             </div>
