--- a/Cosmatics.html
+++ b/Cosmatics.html
@@ -31,10 +31,10 @@
         <ol>
           <div class="icons-image">
             <a href="Loyality.html">
-              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="">
+              <img src="imgs/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector-removebg-preview.png" alt="registration">
             </a>
             <a href="./cart.html" class="registration-icon">
-              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="">
+              <img src="imgs/shopping-cart-icon-in-flat-style-symbol-vector-20616055-removebg-preview.png" alt="icon">
             </a>
           </div>
         </ol>
