--- a/Vegetables.html
+++ b/Vegetables.html
@@ -15,22 +15,20 @@
       <img class="logo" src="Grocies_Supermarket_4.png" alt="logo">
     </a>
     
-   <div class="navbar">
+  <div class="navbar">
       <ol>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="About US.html">About Us</a></li>
+        <li><a href="About_US.html">About Us</a></li>
         <div class="dropdown">
-          <button class="dropbtn">
-            <li><a href="Products.html">Products</a></li>
-          </button>
-                 <ol>
-            <div class="dropdown-content">
-              <li><a href="Vegetables.html">Vegetables</a></li>
-              <li><a href="Dairy Products.html">Dairy Products</a></li>
-              <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
-            </div>
-          </ol>
-        </div>
+            <li class="dropbtn"><a href="Products.html" class="button-link">Product</a></li>
+            <ol>
+                <div class="dropdown-content">
+                    <li><a href="Vegetables.html">Vegetables</a></li>
+                    <li><a href="Dairy Products.html">Dairy Products</a></li>
+                    <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
+                </div>
+            </ol>
+         </div>
         <li><a href="Order.html">Buy Now</a></li>
         <ol>
           <div class="icons-image">
