--- a/Vegetables.html
+++ b/Vegetables.html
@@ -17,13 +17,13 @@
     
   <div class="navbar">
       <ol>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="About_US.html">About Us</a></li>
         <div class="dropdown">
             <li class="dropbtn"><a href="Products.html" class="button-link">Product</a></li>
             <ol>
                 <div class="dropdown-content">
-                    <li><a href="Vegetables.html">Vegetables</a></li>
+                    <li><a href="Vegetables.html" class="active">Vegetables</a></li>
                     <li><a href="Dairy Products.html">Dairy Products</a></li>
                     <li><a href="Cosmatics.html">Cosmetic and SkinCare</a></li>
                 </div>
